--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Pull image
         run: docker pull ${{ env.IMAGE }}
 
-      - name: Ruy image
+      - name: Run image
         run: docker run ${{ env.IMAGE }}
