--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,5 +1,5 @@
 
-on: [push, repository_dispatch]
+on: workflow_dispatch
 
 env:
   IMAGE: ghcr.io/${{ github.repository_owner }}/ghcr-publish:latest
