--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Login to ghcr.io
-        run: docker login https://ghcr.io -u token --password-stdin <<< ${{ secrets.READ_PACKAGES_TOKEN }}
+        run: docker login https://ghcr.io -u token --password-stdin <<< ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Pull image
         run: docker pull ${{ env.IMAGE }}
