--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -2,7 +2,7 @@
 on: workflow_dispatch
 
 env:
-  IMAGE: ghcr.io/${{ github.repository_owner }}/ghcr-publish:latest
+  IMAGE: ghcr.io/${{ github.repository }}:latest
 
 jobs:
   pull:
