--- a/.github/workflows/rmdocker.yml
+++ b/.github/workflows/rmdocker.yml
@@ -24,5 +24,5 @@ jobs:
           name: some-web-service
           tags: |
             ghcr.io/${{ github.repository }}:latest
-          min-versions-to-keep: 1
-          #delete-only-pre-release-versions: "true"
+          #min-versions-to-keep: 1
+          delete-only-pre-release-versions: "true"
