--- a/.github/workflows/rmdocker.yml
+++ b/.github/workflows/rmdocker.yml
@@ -22,7 +22,6 @@ jobs:
           token: ${{ secrets.REGISTRY_TOKEN }}
           owner: bots-house
           name: some-web-service
-          tags: |
-            ghcr.io/${{ github.repository }}:latest
+          tags: ghcr.io/${{ github.repository }}:latest
           #min-versions-to-keep: 1
           #delete-only-pre-release-versions: "true"
