--- a/.github/workflows/rmdocker.yml
+++ b/.github/workflows/rmdocker.yml
@@ -22,6 +22,6 @@ jobs:
           token: ${{ secrets.REGISTRY_TOKEN }}
           owner: bots-house
           name: some-web-service
-          tag: ghcr.io/${{ github.repository }}:latest
+          tag: latest
           #min-versions-to-keep: 1
           #delete-only-pre-release-versions: "true"
