--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,20 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v2
-        with:
-          push: true # Will only build if this is not here
-          tags: |
-            ghcr.io/${{ github.repository }}:latest
+      
+      #- name: Build and Push Docker Image
+       # uses: docker/build-push-action@v2
+        #with:
+         # push: true # Will only build if this is not here
+          #tags: |
+           # ghcr.io/${{ github.repository }}:latest
+           
+      - name: run docker and push
+        run: |
+          docker build -f ./Dockerfile . -t test:${{github.run_number}} --build-arg NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN
+          docker tag test:${{github.run_number}} ghcr.io/ghcr-install/test:${{github.run_number}}
+          docker push ghcr.io/ghcr-install/test:${{github.run_number}}
+          
       - name: list image
         run: |
           docker image ls
