--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           docker build -f ./Dockerfile . -t test:${{github.run_number}} --build-arg NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN
           docker tag test:${{github.run_number}} ghcr.io/ghcr-install/test:${{github.run_number}}
           docker push ghcr.io/ghcr-install/test:${{github.run_number}}
+        shell: bash
           
       - name: list image
         run: |
