--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,12 +33,12 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}:${{github.run_number}}
            
-      #- name: run docker and push
-       # run: |
-       #   docker build -f ./Dockerfile . -t test:${{github.run_number}} --build-arg NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN
-       #   docker tag test:${{github.run_number}} ghcr.io/ghcr-install/test:${{github.run_number}}
-       #   docker push ghcr.io/ghcr-install/test:${{github.run_number}}
-       # shell: bash
+      - name: run docker and push
+        run: |
+          docker build -f ./Dockerfile . -t test:${{github.run_number}} --build-arg NODE_AUTH_TOKEN=$NODE_AUTH_TOKEN
+          docker tag test:${{github.run_number}} ghcr.io/ghcr-install/test:${{github.run_number}}
+          docker push ghcr.io/ghcr-install/test:${{github.run_number}}
+        shell: bash
           
       - name: list image
         run: |
@@ -55,13 +55,13 @@ jobs:
        #   token: ${{ secrets.REGISTRY_TOKEN }}
        #   tag: ghcr.io/${{ github.repository }}:${{github.run_number}}
           
-      - name: Prune
-        uses: vlaurin/action-ghcr-prune@main
-        with:
-          token: ${{ secrets.REGISTRY_TOKEN }}
-          #organization: your-org
-          container: ghcr.io/${{ github.repository }}
-          dry-run: true # Dry-run first, then change to `false`
-          older-than: 0 # days
-          keep-last: 1
-          untagged: true
+      #- name: Prune
+       # uses: vlaurin/action-ghcr-prune@main
+       # with:
+       #   token: ${{ secrets.REGISTRY_TOKEN }}
+       #   #organization: your-org
+       #   container: ghcr.io/${{ github.repository }}
+       #   dry-run: true # Dry-run first, then change to `false`
+       #   older-than: 0 # days
+       #   keep-last: 1
+       #   untagged: true
