--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,27 @@ jobs:
           RUNNUMBER: ${{ github.run_number  }}
         with:         
           filename: .github/deployment-approval.md
+          
+  parse:
+    if: ${{ !github.event.issue.pull_request && github.event.comment.body == 'Approved' }}
+    runs-on: ubuntu-latest
+    outputs:
+      deploy-environment: ${{ fromJSON(steps.issue_body_parser.outputs.payload).environment }}
+      ci-run-number: ${{ fromJSON(steps.issue_body_parser.outputs.payload).runNumber }}
+    steps:
+      - name: Comment on Issue      
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: 'Deployment Initiated 🚀'
+          
+      - name: Get Issue Data
+        uses: peter-murray/issue-body-parser-action@v1
+        id: issue_body_parser
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          issue_id: ${{ github.event.issue.number }}         
+          payload_marker: target_payload 
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -25,7 +46,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-      
+          
+  deploy-dev:
+    needs: [parse]
+    if: ${{ needs.parse.outputs.deploy-environment == 'Dev' }}
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v2 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         with:
