--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,9 @@
 name: Deploy Docker
 
 # Run workflow on tags starting with v (eg. v2, v1.2.0)
-on: workflow_dispatch
+on: 
+  issue_comment:
+    types: [created]
 
 jobs:
   Deploy:
