--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: Deploy Docker
 
 # Run workflow on tags starting with v (eg. v2, v1.2.0)
 on: 
+  workflow_dispatch:
   issue_comment:
     types: [created]
 
