--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -10,6 +10,13 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
+      
+      - name: Manual Workflow Approval
+        uses: trstringer/manual-approval@v1
+        with:
+         secret: ${{ github.TOKEN }}
+         approvers: pnamade
+          
         
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
