--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy Docker
 # Run workflow on tags starting with v (eg. v2, v1.2.0)
 on: 
   workflow_dispatch:
-  issue_comment:
-    types: [created]
+   #issue_comment:
+     #types: [created]
 
 jobs:
   #setup:
