--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -5,17 +5,39 @@ on:
   workflow_dispatch:
 
 jobs:
-  setup:
+
+  build:
+    name: build
     runs-on: ubuntu-latest
     steps:
+      - name: Build
+        run: echo building
+        
+  approval:
+    name: approval
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: trstringer,acdunnigan
+      - name: Deploy to production
+        run: echo deploying
+        
+  setup:
+    runs-on: ubuntu-latest
+    needs: approval
+    steps:
+     
       - name: Checkout Code
         uses: actions/checkout@v1
       
-      - name: Manual Workflow Approval
-        uses: trstringer/manual-approval@v1
-        with:
-         secret: ${{ github.TOKEN }}
-         approvers: praveenkumar.tn@outlook.com
+      #- name: Manual Workflow Approval
+      #  uses: trstringer/manual-approval@v1
+      #  with:
+      #   secret: ${{ github.TOKEN }}
+      #   approvers: praveenkumar.tn@outlook.com
          
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
