--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -32,6 +32,12 @@ jobs:
      
       - name: Checkout Code
         uses: actions/checkout@v1
+        
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
       
       #- name: Manual Workflow Approval
       #  uses: trstringer/manual-approval@v1
