--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -34,10 +34,23 @@ jobs:
         uses: actions/checkout@v1
         
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.36.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WITH_V: true
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
+        
+      #- name: Bump version and push tag
+      #  uses: anothrNick/github-tag-action@1.36.0
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #    WITH_V: true
       
       #- name: Manual Workflow Approval
       #  uses: trstringer/manual-approval@v1
