--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -39,12 +39,12 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+      #- name: Create a GitHub release
+      #  uses: ncipollo/release-action@v1
+      #  with:
+      #    tag: ${{ steps.tag_version.outputs.new_tag }}
+      #    name: Release ${{ steps.tag_version.outputs.new_tag }}
+      #    body: ${{ steps.tag_version.outputs.changelog }}
         
       #- name: Bump version and push tag
       #  uses: anothrNick/github-tag-action@1.36.0
