--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -2,7 +2,10 @@ name: Imp Docker
 
 # Run workflow on tags starting with v (eg. v2, v1.2.0)
 on: 
-  workflow_dispatch:
+  #workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
 
