--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -1,8 +1,14 @@
 name: Imp Docker
 
 # Run workflow on tags starting with v (eg. v2, v1.2.0)
-on: push
-  #workflow_dispatch:
+on:
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches:    
+      - main
+    # Sequence of patterns matched against refs/tags
+    tags:        
+      - v*
 
 jobs:
 
