--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -1,14 +1,21 @@
 name: Imp Docker
 
 # Run workflow on tags starting with v (eg. v2, v1.2.0)
+#on:
+#  push:
+#    # Sequence of patterns matched against refs/heads
+#    branches:    
+#      - main
+#    # Sequence of patterns matched against refs/tags
+#    tags:        
+#     - v*
 on:
-  push:
-    # Sequence of patterns matched against refs/heads
-    branches:    
-      - main
-    # Sequence of patterns matched against refs/tags
-    tags:        
-      - v*
+  # Triggers the workflow on push or pull request events but only for the master branch
+    push:
+      branches: [ master ]
+
+  # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 jobs:
 
