--- a/.github/workflows/imp.yaml
+++ b/.github/workflows/imp.yaml
@@ -15,7 +15,7 @@ on:
       branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
-    workflow_dispatch:
+  #  workflow_dispatch:
 
 jobs:
 
